# Copyright (c) 2020	 Roland Wirth
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
# * Redistributions of source code must retain the above copyright
#	notice, this list of conditions and the following disclaimer.
# * Redistributions in binary form must reproduce the above copyright
#	notice, this list of conditions and the following disclaimer in
#	the documentation and/or other materials provided with the
#	distribution.
# * Neither the name of the copyright holders nor the names of
#	contributors may be used to endorse or promote products derived
#	from this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
# ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
# LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
# CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
# ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
# POSSIBILITY OF SUCH DAMAGE.
#
# $Id$
#

# regenerate with find . -name '*.h' | sed -e 's/^.\//\t/;s/$/ \\/'

avrdir = $(prefix)/avr/include/avr/io
avr_HEADERS = \
	at90can128.h \
	at90can32.h \
	at90can64.h \
	at90pwm1.h \
	at90pwm161.h \
	at90pwm216.h \
	at90pwm2b.h \
	at90pwm316.h \
	at90pwm3b.h \
	at90pwm81.h \
	at90usb1286.h \
	at90usb1287.h \
	at90usb162.h \
	at90usb646.h \
	at90usb647.h \
	at90usb82.h \
	ata5272.h \
	ata5505.h \
	ata5700m322.h \
	ata5702m322.h \
	ata5781.h \
	ata5782.h \
	ata5783.h \
	ata5787.h \
	ata5790.h \
	ata5790n.h \
	ata5791.h \
	ata5795.h \
	ata5831.h \
	ata5832.h \
	ata5833.h \
	ata5835.h \
	ata6285.h \
	ata6286.h \
	ata6612c.h \
	ata6613c.h \
	ata6614q.h \
	ata6616c.h \
	ata6617c.h \
	ata664251.h \
	ata8210.h \
	ata8215.h \
	ata8510.h \
	ata8515.h \
	atmega128.h \
	atmega1280.h \
	atmega1281.h \
	atmega1284.h \
	atmega1284p.h \
	atmega1284rfr2.h \
	atmega128a.h \
	atmega128rfa1.h \
	atmega128rfr2.h \
	atmega16.h \
	atmega1608.h \
	atmega1609.h \
	atmega162.h \
	atmega164a.h \
	atmega164p.h \
	atmega164pa.h \
	atmega165a.h \
	atmega165p.h \
	atmega165pa.h \
	atmega168.h \
	atmega168a.h \
	atmega168p.h \
	atmega168pa.h \
	atmega168pb.h \
	atmega169a.h \
	atmega169p.h \
	atmega169pa.h \
	atmega16a.h \
	atmega16hva.h \
	atmega16hvb.h \
	atmega16hvbrevb.h \
	atmega16m1.h \
	atmega16u2.h \
	atmega16u4.h \
	atmega2560.h \
	atmega2561.h \
	atmega2564rfr2.h \
	atmega256rfr2.h \
	atmega32.h \
	atmega3208.h \
	atmega3209.h \
	atmega324a.h \
	atmega324p.h \
	atmega324pa.h \
	atmega324pb.h \
	atmega325.h \
	atmega3250.h \
	atmega3250a.h \
	atmega3250p.h \
	atmega3250pa.h \
	atmega325a.h \
	atmega325p.h \
	atmega325pa.h \
	atmega328.h \
	atmega328p.h \
	atmega328pb.h \
	atmega329.h \
	atmega3290.h \
	atmega3290a.h \
	atmega3290p.h \
	atmega3290pa.h \
	atmega329a.h \
	atmega329p.h \
	atmega329pa.h \
	atmega32a.h \
	atmega32c1.h \
	atmega32hvb.h \
	atmega32hvbrevb.h \
	atmega32m1.h \
	atmega32u2.h \
	atmega32u4.h \
	atmega406.h \
	atmega48.h \
	atmega4808.h \
	atmega4809.h \
	atmega48a.h \
	atmega48p.h \
	atmega48pa.h \
	atmega48pb.h \
	atmega64.h \
	atmega640.h \
	atmega644.h \
	atmega644a.h \
	atmega644p.h \
	atmega644pa.h \
	atmega644rfr2.h \
	atmega645.h \
	atmega6450.h \
	atmega6450a.h \
	atmega6450p.h \
	atmega645a.h \
	atmega645p.h \
	atmega649.h \
	atmega6490.h \
	atmega6490a.h \
	atmega6490p.h \
	atmega649a.h \
	atmega649p.h \
	atmega64a.h \
	atmega64c1.h \
	atmega64hve2.h \
	atmega64m1.h \
	atmega64rfr2.h \
	atmega8.h \
	atmega808.h \
	atmega809.h \
	atmega8515.h \
	atmega8535.h \
	atmega88.h \
	atmega88a.h \
	atmega88p.h \
	atmega88pa.h \
	atmega88pb.h \
	atmega8a.h \
	atmega8hva.h \
	atmega8u2.h \
	attiny10.h \
	attiny102.h \
	attiny104.h \
	attiny11.h \
	attiny12.h \
	attiny13.h \
	attiny13a.h \
	attiny15.h \
	attiny1604.h \
	attiny1606.h \
	attiny1607.h \
	attiny1614.h \
	attiny1616.h \
	attiny1617.h \
	attiny1634.h \
	attiny167.h \
	attiny20.h \
	attiny202.h \
	attiny204.h \
	attiny212.h \
	attiny214.h \
	attiny2313.h \
	attiny2313a.h \
	attiny24.h \
	attiny24a.h \
	attiny25.h \
	attiny26.h \
	attiny261.h \
	attiny261a.h \
	attiny3216.h \
	attiny3217.h \
	attiny4.h \
	attiny40.h \
	attiny402.h \
	attiny404.h \
	attiny406.h \
	attiny412.h \
	attiny414.h \
	attiny416.h \
	attiny416auto.h \
	attiny417.h \
	attiny4313.h \
	attiny43u.h \
	attiny44.h \
	attiny441.h \
	attiny44a.h \
	attiny45.h \
	attiny461.h \
	attiny461a.h \
	attiny48.h \
	attiny5.h \
	attiny804.h \
	attiny806.h \
	attiny807.h \
	attiny814.h \
	attiny816.h \
	attiny817.h \
	attiny828.h \
	attiny84.h \
	attiny841.h \
	attiny84a.h \
	attiny85.h \
	attiny861.h \
	attiny861a.h \
	attiny87.h \
	attiny88.h \
	attiny9.h \
	atxmega128a1.h \
	atxmega128a1u.h \
	atxmega128a3.h \
	atxmega128a3u.h \
	atxmega128a4u.h \
	atxmega128b1.h \
	atxmega128b3.h \
	atxmega128c3.h \
	atxmega128d3.h \
	atxmega128d4.h \
	atxmega16a4.h \
	atxmega16a4u.h \
	atxmega16c4.h \
	atxmega16d4.h \
	atxmega16e5.h \
	atxmega192a3.h \
	atxmega192a3u.h \
	atxmega192c3.h \
	atxmega192d3.h \
	atxmega256a3.h \
	atxmega256a3b.h \
	atxmega256a3bu.h \
	atxmega256a3u.h \
	atxmega256c3.h \
	atxmega256d3.h \
	atxmega32a4.h \
	atxmega32a4u.h \
	atxmega32c3.h \
	atxmega32c4.h \
	atxmega32d3.h \
	atxmega32d4.h \
	atxmega32e5.h \
	atxmega384c3.h \
	atxmega384d3.h \
	atxmega64a1.h \
	atxmega64a1u.h \
	atxmega64a3.h \
	atxmega64a3u.h \
	atxmega64a4u.h \
	atxmega64b1.h \
	atxmega64b3.h \
	atxmega64c3.h \
	atxmega64d3.h \
	atxmega64d4.h \
	atxmega8e5.h
